recursion.cons.lessons.recursion.cons.Nth.scala.error
nth:2: error: not enough arguments for method nth: (l: List[Int], n: Int)Int.
Unspecified value parameter n.
  return nth(l.tail)
            ^